maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:1: error: value pickupBaggle is not a member of Unit
override def run() {while (!isOverBaggle) {while (!isFacingWall()) {forward(); right()}; left()} pickupBaggle()} 
                                                                                                 ^